--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -47,14 +47,14 @@
 		</span>
 		
 		<!-- three.js -->
-		<script type="text/javascript" src="../libs/three.js"></script>
+		<script type="text/javascript" src="libs/threejs/three.js"></script>
 		
 		<!-- Utilities, Controllers, Camera -->
 		<script type="text/javascript" src="TextureManager.js"></script>
 		<script type="text/javascript" src="Camera.js"></script>
 		<script type="text/javascript" src="CameraController.js"></script>
 		<script type="text/javascript" src="WeaponController.js"></script>
-		<script type="text/javascript" src="util/Colors.js"></script>
+		
 		<script type="text/javascript" src="util/MathHelper.js"></script>
 		<script type="text/javascript" src="util/GeometryHelper.js"></script>
 		
