--- a/ludum-dare-29/test/test_runner.html
+++ b/ludum-dare-29/test/test_runner.html
@@ -2,13 +2,18 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>QUnit Example</title>
+		<title>Tests</title>
 		<link rel="stylesheet" href="../libs/qunit/qunit-1.14.0.css">
 	</head>
 	<body>
 		<div id="qunit"></div>
 		<div id="qunit-fixture"></div>
 		<script src="../libs/qunit/qunit-1.14.0.js"></script>
-		<script src="tests.js"></script>
+		
+		<!-- Files under test -->
+		<script type="text/javascript" src="../src/util/BoundingBox.js"></script>
+		
+		<!-- Tests -->
+		<script src="BoundingBoxTest.js"></script>
 	</body>
 </html>
