Minor index.html updates

--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -49,20 +49,16 @@
 		<!-- three.js -->
 		<script type="text/javascript" src="libs/threejs/three.js"></script>
 		
-		<!-- Utilities, Controllers, Camera -->
+		<!-- Utilities -->
+		<script type="text/javascript" src="util/MathHelper.js"></script>
+		<script type="text/javascript" src="util/BoundingBox.js"></script>
+		
+		<!-- Graphics -->
 		<script type="text/javascript" src="TextureManager.js"></script>
 		<script type="text/javascript" src="Camera.js"></script>
+		
+		<!-- Controllers -->
 		<script type="text/javascript" src="CameraController.js"></script>
-		<script type="text/javascript" src="WeaponController.js"></script>
-		
-		<script type="text/javascript" src="util/MathHelper.js"></script>
-		<script type="text/javascript" src="util/GeometryHelper.js"></script>
-		
-		<!-- Navigation -->
-		<script type="text/javascript" src="navigation/BoundingBox.js"></script>
-		<script type="text/javascript" src="navigation/BlockedArea.js"></script>
-		<script type="text/javascript" src="navigation/Zone.js"></script>
-		<script type="text/javascript" src="navigation/Zones.js"></script>
 		
 		<!-- The starting point of the program. -->
 		<script type="text/javascript" src="main.js"></script>
