Removed deleted file references from index.html

--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -33,18 +33,7 @@
 		<script type="text/javascript" src="libs/threejs/three.js"></script>
 		<script type="text/javascript" src="libs/physijs/physi.js"></script>
 		
-		<!-- Utilities -->
-		<script type="text/javascript" src="src/util/MathHelper.js"></script>
-		<script type="text/javascript" src="src/util/BoundingBox.js"></script>
-		
-		<!-- Graphics -->
-		<script type="text/javascript" src="src/graphics/TextureManager.js"></script>
-		<script type="text/javascript" src="src/graphics/Camera.js"></script>
-		
-		<!-- Controllers -->
-		<script type="text/javascript" src="src/controller/CameraController.js"></script>
-		
-		<!-- The starting point of the program. -->
+		<!-- The entry point into the program. -->
 		<script type="text/javascript" src="src/main.js"></script>
 		
 		<script type="text/javascript">
@@ -68,6 +57,7 @@
 		<div style="clear:both">
 			<footer>
 			    Christopher D. Canfield<br>
+			    Caitlin F. Canfield<br>
 			    Divergent Thoughts Games
 			</footer>
 		</div>
