--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -36,9 +36,11 @@
 		<!-- World -->
 		<script type="text/javascript" src="src/world/Entity.js"></script>
 		<script type="text/javascript" src="src/world/World.js"></script>
+		<script type="text/javascript" src="src/world/Entities.js"></script>
 		
 		<!-- Controllers -->
 		<script type="text/javascript" src="src/controller/TestEnemyController.js"></script>
+		<script type="text/javascript" src="src/controller/CharacterKeyboardController.js"></script>
 
 		<!-- The entry point into the program. -->
 		<script type="text/javascript" src="src/main.js"></script>
