--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -30,8 +30,14 @@
 		</style>
 
 		<!-- Libraries -->
+		<script type="text/javascript" src="libs/jquery/jquery-2.1.0.min.js"></script>
 		<script type="text/javascript" src="libs/threejs/three.js"></script>
 		<script type="text/javascript" src="libs/physijs/physi.js"></script>
+		<!-- TODO: remove this if you don't use it -->
+		<!-- <script type="text/javascript" src="libs/tweenjs/tweenjs-0.5.1.min.js"></script> -->
+
+		<!-- Graphics -->
+		<script type="text/javascript" src="src/graphics/TextureManager.js"></script>
 
 		<!-- World -->
 		<script type="text/javascript" src="src/world/Entity.js"></script>
@@ -53,7 +59,7 @@
 	</head>
 
 	<body>
-		<div id="viewport"></div>
+		<div id="viewport"> </div>
 
 		<!-- <span class="blockDisplay ">
 		<span style="font-weight: bold">Controls:</span><br>
