--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -47,6 +47,7 @@
 		<!-- Controllers -->
 		<script type="text/javascript" src="src/controller/TestEnemyController.js"></script>
 		<script type="text/javascript" src="src/controller/PlayerCharacterController.js"></script>
+		<script type="text/javascript" src="src/controller/CameraController.js"></script>
 
 		<!-- The entry point into the program. -->
 		<script type="text/javascript" src="src/main.js"></script>
