Added texture to ground

--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -38,6 +38,7 @@
 
 		<!-- Graphics -->
 		<script type="text/javascript" src="src/graphics/TextureManager.js"></script>
+		<script type="text/javascript" src="src/graphics/TexturePath.js"></script>
 
 		<!-- World -->
 		<script type="text/javascript" src="src/world/Entity.js"></script>
