Added Levels class; Updates to movement and level creation

--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -49,6 +49,9 @@
 		<script type="text/javascript" src="src/controller/TestEnemyController.js"></script>
 		<script type="text/javascript" src="src/controller/PlayerCharacterController.js"></script>
 		<script type="text/javascript" src="src/controller/CameraController.js"></script>
+		
+		<!-- Levels -->
+		<script type="text/javascript" src="src/world/Levels.js"></script>
 
 		<!-- The entry point into the program. -->
 		<script type="text/javascript" src="src/main.js"></script>
