Began implementing components

--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -39,6 +39,11 @@
 		<!-- Graphics -->
 		<script type="text/javascript" src="src/graphics/TextureManager.js"></script>
 		<script type="text/javascript" src="src/graphics/TexturePath.js"></script>
+		
+		<!-- Component -->
+		<script type="text/javascript" src="src/component/AttackValue.js"></script>
+		<script type="text/javascript" src="src/component/BallWeapon.js"></script>
+		<script type="text/javascript" src="src/component/Health.js"></script>
 
 		<!-- World -->
 		<script type="text/javascript" src="src/world/Entity.js"></script>
