--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -33,8 +33,8 @@
 		<script type="text/javascript" src="libs/jquery/jquery-2.1.0.min.js"></script>
 		<script type="text/javascript" src="libs/threejs/three.js"></script>
 		<script type="text/javascript" src="libs/physijs/physi.js"></script>
-		<!-- TODO: remove this if you don't use it -->
-		<!-- <script type="text/javascript" src="libs/tweenjs/tweenjs-0.5.1.min.js"></script> -->
+		<script type="text/javascript" src="libs/easeljs/easeljs-0.7.1.min.js"></script>
+		<script type="text/javascript" src="libs/tweenjs/tweenjs-0.5.1.min.js"></script>
 
 		<!-- Graphics -->
 		<script type="text/javascript" src="src/graphics/TextureManager.js"></script>
