Fixed component problems; Added projectile controller

--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -54,6 +54,7 @@
 		<script type="text/javascript" src="src/controller/TestEnemyController.js"></script>
 		<script type="text/javascript" src="src/controller/PlayerCharacterController.js"></script>
 		<script type="text/javascript" src="src/controller/CameraController.js"></script>
+		<script type="text/javascript" src="src/controller/ProjectileController.js"></script>
 		
 		<!-- Levels -->
 		<script type="text/javascript" src="src/world/Levels.js"></script>
