--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -55,6 +55,7 @@
 		<script type="text/javascript" src="src/controller/PlayerCharacterController.js"></script>
 		<script type="text/javascript" src="src/controller/CameraController.js"></script>
 		<script type="text/javascript" src="src/controller/ProjectileController.js"></script>
+		<script type="text/javascript" src="src/controller/OutOfBoundsController.js"></script>
 		
 		<!-- Levels -->
 		<script type="text/javascript" src="src/world/Levels.js"></script>
