Removed Entities; Added AttackBall, PlayerCharacter, TestEnemy

--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -57,6 +57,11 @@
 		<script type="text/javascript" src="src/world/controller/ProjectileController.js"></script>
 		<script type="text/javascript" src="src/world/controller/OutOfBoundsController.js"></script>
 		
+		<!-- Entities -->
+		<script type="text/javascript" src="src/world/entity/AttackBall.js"></script>
+		<script type="text/javascript" src="src/world/entity/PlayerCharacter.js"></script>
+		<script type="text/javascript" src="src/world/entity/TestEnemy.js"></script>
+		
 		<!-- Levels -->
 		<script type="text/javascript" src="src/world/Levels.js"></script>
 
