Fixed problems with index and Levels

--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -48,7 +48,6 @@
 		<!-- World -->
 		<script type="text/javascript" src="src/world/Entity.js"></script>
 		<script type="text/javascript" src="src/world/World.js"></script>
-		<script type="text/javascript" src="src/world/Entities.js"></script>
 		
 		<!-- Controllers -->
 		<script type="text/javascript" src="src/world/controller/TestEnemyController.js"></script>
@@ -56,11 +55,13 @@
 		<script type="text/javascript" src="src/world/controller/CameraController.js"></script>
 		<script type="text/javascript" src="src/world/controller/ProjectileController.js"></script>
 		<script type="text/javascript" src="src/world/controller/OutOfBoundsController.js"></script>
+		<script type="text/javascript" src="src/world/controller/FollowerController.js"></script>
 		
 		<!-- Entities -->
 		<script type="text/javascript" src="src/world/entity/AttackBall.js"></script>
 		<script type="text/javascript" src="src/world/entity/PlayerCharacter.js"></script>
 		<script type="text/javascript" src="src/world/entity/TestEnemy.js"></script>
+		<script type="text/javascript" src="src/world/entity/Follower.js"></script>
 		
 		<!-- Levels -->
 		<script type="text/javascript" src="src/world/Levels.js"></script>
