Continued implementing FollowerController, and related

--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -63,6 +63,9 @@
 		<script type="text/javascript" src="src/world/entity/TestEnemy.js"></script>
 		<script type="text/javascript" src="src/world/entity/Follower.js"></script>
 		
+		<!-- Commands -->
+		<script type="text/javascript" src="src/world/command/MoveCommand.js"></script>
+		
 		<!-- Levels -->
 		<script type="text/javascript" src="src/world/Levels.js"></script>
 
