Added stack of boxes; New SimpleBox entity
- Changed the out of bounds value for PlayerCharacter
- Changed the level and lighting a bit

--- a/ludum-dare-29/index.html
+++ b/ludum-dare-29/index.html
@@ -60,6 +60,7 @@
 		<script type="text/javascript" src="src/world/entity/AttackBall.js"></script>
 		<script type="text/javascript" src="src/world/entity/PlayerCharacter.js"></script>
 		<script type="text/javascript" src="src/world/entity/TestEnemy.js"></script>
+		<script type="text/javascript" src="src/world/entity/SimpleBox.js"></script>
 		
 		<!-- Commands -->
 		
